risc0/zirgen/dsl/test/repro/empty_array_type_inference.zir
// RUN: not zirgen %s 2>&1 | FileCheck %s
// CHECK: error: An array must contain at least one element

component Foo(x: Val) {
  []
}

